--- a/sass/style.scss
+++ b/sass/style.scss
@@ -58,13 +58,11 @@ body {
     }
 }
 
-
-
-
-
 section {
     padding: 5vh 0;
     width: 100%;
+    min-height: 100vh;
+    // border: 2px solid red;
     // section-title
 .section-title {
     font-size: 2.25rem;
