--- a/css/style.css
+++ b/css/style.css
@@ -1861,6 +1861,7 @@ hamburger
   position: relative;
   margin: 0 auto;
   z-index: 4;
+  width: 100%;
 }
 #skills .dropdown.io-item {
   transform: scale(1) translateY(5vh);
@@ -1876,6 +1877,7 @@ hamburger
   color: #f4f4f4;
   padding: 0.5rem 1rem;
   margin-inline: auto;
+  margin-bottom: 5vh;
   width: 20rem;
   font-size: 1.35rem;
   font-weight: 400;
@@ -1937,70 +1939,83 @@ hamburger
 #skills .dropdown .dropbtn.active::after {
   opacity: 1;
 }
+@media (min-width: 768px) {
+  #skills .dropdown .dropbtn:hover {
+    color: rgba(255, 255, 255, 0.7);
+  }
+  #skills .dropdown .dropbtn:hover::before {
+    opacity: 0.8;
+  }
+  #skills .dropdown .dropbtn:hover i {
+    color: #f4f4f4;
+  }
+}
 #skills .dropdown .dropdown-content {
   display: none;
   width: 100%;
   z-index: 1;
-  justify-content: center;
-  align-items: center;
-  background: #485563;
+  background: #15191e;
   position: relative;
-  padding-bottom: 10vh;
+  padding: 5vh 5vw;
 }
 #skills .dropdown .dropdown-content.show {
   display: block;
 }
-#skills .dropdown .dropdown-content::before {
-  content: "";
-  position: absolute;
-  left: 0;
-  top: 0;
-  height: 100%;
-  width: 100%;
-  background: rgba(0, 0, 0, 0.756);
-}
 #skills .dropdown .dropdown-content .skills-bottom {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
   /*items wrapped onto multiple lines*/
-  margin-top: 5vh;
-  padding-top: 5vh;
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 5vh;
+}
+@media (min-width: 768px) {
+  #skills .dropdown .dropdown-content .skills-bottom {
+    gap: 1.5rem;
+    grid-template-columns: 1fr 1fr 1fr;
+  }
 }
 #skills .dropdown .dropdown-content .skills-bottom .skills-item {
   flex-basis: 100%;
+  width: 100%;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
   flex-direction: column;
-  padding: 0.5em;
+  padding: 1rem 0.5rem 0.5rem 1.5rem;
   background: transparent;
   background-size: cover;
-  margin: 10vh 5vw;
   position: relative;
   z-index: 1;
   text-overflow: ellipsis;
   overflow: hidden;
   border-radius: 10px;
   height: auto;
-  line-height: 1.3;
   isolation: isolate;
+}
+@media (min-width: 576px) {
+  #skills .dropdown .dropdown-content .skills-bottom .skills-item {
+    padding: 1rem 0.5rem 0.5rem 1.5rem;
+  }
+}
+@media (min-width: 820px) {
+  #skills .dropdown .dropdown-content .skills-bottom .skills-item {
+    padding: 1rem 0.5rem 1rem 2rem;
+  }
 }
 #skills .dropdown .dropdown-content .skills-bottom .skills-item[data-scroll=in] {
   transition: 1.5s;
 }
 #skills .dropdown .dropdown-content .skills-bottom .skills-item ul {
-  margin: 0.2em;
-  padding: 0.5em;
+  margin: 0;
+  padding: 0;
   z-index: 5;
+  height: 50%;
+  width: 100%;
 }
 #skills .dropdown .dropdown-content .skills-bottom .skills-item ul li {
   color: #fff;
-  font-size: 0.9em;
+  font-size: 0.9rem;
   text-align: left;
-  margin: 0.5em;
-  padding: 0.2em 0.4em;
+  line-height: 1.7;
   text-transform: capitalize;
 }
 #skills .dropdown .dropdown-content .skills-bottom .skills-item ul li a {
@@ -2035,22 +2050,22 @@ hamburger
 #skills .dropdown .dropdown-content .skills-bottom .skills-item .icon {
   display: grid;
   place-items: center;
-  height: 80px;
-  width: 80px;
+  height: 5rem;
+  width: 5rem;
   border: none;
   outline: none;
+  border-radius: 50%;
   padding: 10px;
-  margin-top: 15px;
-  margin-bottom: 20px;
+  margin-bottom: 1rem;
   position: relative;
   isolation: isolate;
 }
 #skills .dropdown .dropdown-content .skills-bottom .skills-item .icon img {
-  width: 100%;
+  width: 80%;
 }
 #skills .dropdown .dropdown-content .skills-bottom .skills-item .icon i {
   color: #ead2a1;
-  font-size: 3em;
+  font-size: 2rem;
 }
 #skills .dropdown .dropdown-content .skills-bottom .skills-item .icon::before {
   content: "";
@@ -2097,33 +2112,29 @@ hamburger
   text-decoration: underline #ead2a1;
   text-underline-offset: 0.1em;
 }
-@media (min-width: 768px) {
+@media (min-width: 820px) {
   #skills .dropdown .dropdown-content .skills-bottom .skills-item h3 {
     font-size: 1.5rem;
   }
 }
 @media (min-width: 768px) {
   #skills .dropdown .dropdown-content .skills-bottom .skills-item {
-    flex-basis: 45%;
-    margin: 2.5%;
-    height: 300px;
+    height: auto;
   }
 }
 @media (min-width: 1024px) {
   #skills .dropdown .dropdown-content .skills-bottom .skills-item {
-    flex-basis: 25%;
     width: 100%;
-    margin: 1.5%;
+    margin: 0;
     height: 300px;
     height: 55vh;
-    justify-content: space-evenly;
     pointer-events: visible;
     cursor: pointer;
     transition: 0.2s;
   }
   #skills .dropdown .dropdown-content .skills-bottom .skills-item:hover {
-    transition: 0.3s;
-    transform: scale(1.05);
+    transition: 0.2s;
+    transform: scale(1.0255);
   }
   #skills .dropdown .dropdown-content .skills-bottom .skills-item ul li {
     font-size: 1em;
