--- a/sass/_skills.scss
+++ b/sass/_skills.scss
@@ -104,7 +104,7 @@
         position: relative;
         margin: 0 auto;
         z-index: 4;
-
+        width: 100%;
         // SKILLS-TOP DATA-SCROLL
         &.io-item {
             transform: scale(1) translateY(5vh);
@@ -122,6 +122,7 @@
             color: $text-light;
             padding: .5rem 1rem;
             margin-inline: auto;
+            margin-bottom: 5vh;
             width: 20rem;
             font-size: 1.35rem;
             font-weight: 400;
@@ -188,7 +189,17 @@
                     &::before {opacity: 0}
                     &::after {opacity: 1}
                 }
-            
+                @include md {
+                    &:hover {
+                        &::before {
+                            opacity: .8;
+                        }
+                        color: $brand;
+                        i {
+                            color: $text-light;
+                        }
+                    }
+                }
             // end of box shadow states
             // end of dropdown button shadows
 
@@ -202,72 +213,91 @@
             // show-contents
             &.show {
                 display: block;
-
             }
             // end of show-contents
             display: none;
             width: 100%;
             z-index: 1;
-            justify-content: center;
-            align-items: center;
-            background: $overlay-blue-light;
+            // justify-content: center;
+            // align-items: center;
+            background: $overlay-blue-darkest;
             position: relative;
-            padding-bottom: 10vh;
-            // dropdown content overlay
-            &::before {
-                content: "";
-                position: absolute;
-                left: 0;
-                top: 0;
-                height: 100%;
-                width: 100%;
-                background: rgba(0, 0, 0, 0.756);
+            // padding-bottom: 10vh;
+            // border: 2px solid yellow;
+            padding: 5vh 5vw;
+            @include lg {
+                // padding: 10vh 5vw;
             }
-            // end of dropdown content overlay
             // skills items container
             .skills-bottom {
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                flex-wrap: wrap;
+                // margin: 5vh 5vw;
+                // display: flex;
+                // align-items: center;
+                // justify-content: center;
+                // flex-wrap: wrap;
                 /*items wrapped onto multiple lines*/
-                margin-top: 5vh;
-                padding-top: 5vh;
+                // margin-top: 5vh;
+                // padding-top: 5vh;
+                display: grid;
+                // place-items: center;
+                // border: 2px solid pink;
+                grid-template-columns: 1fr;
+                gap: 5vh;
+                // @include sm {
+                //     grid-template-columns: 1fr 1fr;
+                //     gap: 1rem;
+                // }
+                @include md {
+                    gap: 1.5rem;
+                    grid-template-columns: 1fr 1fr 1fr;
+                }
 
                 // skills-items
                 .skills-item {
                     flex-basis: 100%;
+                    width: 100%;
                     display: flex;
                     align-items: center;
-                    justify-content: center;
+                    justify-content: space-between;
                     flex-direction: column;
-                    padding: .5em;
+                    padding: 1rem .5rem .5rem 1.5rem;
                     background: transparent;
                     background-size: cover;
-                    margin: 10vh 5vw;
+                    // margin: 10vh 5vw;
                     position: relative;
                     z-index: 1;
                     text-overflow: ellipsis;
                     overflow: hidden;
                     border-radius: 10px;
                     height: auto;
-                    line-height: 1.3;
+                    // line-height: 1.3;
+                    @include sm {
+                        padding: 1rem .5rem .5rem 1.5rem;
+                    }
+                    @include lg {
+                        padding: 1rem .5rem 1rem 2rem;
+                    }
                     &[data-scroll="in"]{
                         transition: 1.5s;
                     }
                     isolation: isolate;
                     
                     ul {
-                        margin: .2em;
-                        padding: .5em;
+                        // border: 2px solid red;
+                        margin: 0;
+                        padding: 0;
                         z-index: 5;
+                        height: 50%;
+                        width: 100%;
 
                         li {
                             color: #fff;
-                            font-size: .9em;
+                            font-size: .9rem;
                             text-align: left;
-                            margin: .5em;
-                            padding: .2em .4em;
+                            // margin-bottom: 1rem;
+                            line-height: 1.7;
+                            // margin: .5em;
+                            // padding: .2em .4em;
                             text-transform: capitalize;
                             
                             a {
@@ -315,25 +345,27 @@
                     .icon {
                         display: grid;
                         place-items: center;
+                        height: 5rem;
+                        width: 5rem;
+                        border: none;
+                        outline: none;
+                        border-radius: 50%;
+                        padding: 10px;
+                        margin-bottom: 1rem;
+                        // margin-top: 15px;
+                        // margin-bottom: 20px;
+                        position: relative;
+                        isolation: isolate;
                         // icon img
                         img {
-                            width: 100%;
+                            width: 80%;
                         }
                         // end of icon img
                         i {
                             color:$span-gold;
-                            font-size: 3em;
+                            font-size: 2rem;
                         }
                         
-                        height: 80px;
-                        width: 80px;
-                        border: none;
-                        outline: none;
-                        padding: 10px;
-                        margin-top: 15px;
-                        margin-bottom: 20px;
-                        position: relative;
-                        isolation: isolate;
                         // icon box shadow and background
                         &::before {
                             content: '';
@@ -395,32 +427,32 @@
                         font-family: $font-title;
                         text-decoration: underline $span-gold;
                         text-underline-offset: .1em;
-                        @include md {
+                        @include lg {
                             font-size: 1.5rem;
                         }
                     }
                     // end of skills item title (h2)
                     // skills items on tablets
                     @media (min-width:768px) {
-                        flex-basis: 45%;
-                        margin: 2.5%;
-                        height: 300px;
+                        // flex-basis: 45%;
+                        // margin: 2.5%;
+                        height: auto;
                     }
                     // end of skills items on tablets
                     // skills items on desktop
                     @media (min-width: 1024px) {
-                        flex-basis: 25%;
+                        // flex-basis: 25%;
                         width: 100%;
-                        margin: 1.5%;
+                        margin: 0;
                         height: 300px;
                         height: 55vh;
-                        justify-content: space-evenly;
+                        // justify-content: space-evenly;
                         pointer-events: visible;
                         cursor: pointer;
                         transition: .2s;
                         &:hover {
-                            transition: .3s;
-                            transform: scale(1.05);
+                            transition: .2s;
+                            transform: scale(1.0255);
                         }
                         ul {
                             li {
