--- a/sass/_projects.scss
+++ b/sass/_projects.scss
@@ -147,7 +147,7 @@
                         // links icon
                         i {
                             transition: .2s;
-                            color: $span-gold;
+                            color: $brand;
                             font-size: .8rem;
                             padding: .5rem 0;
                             // // margin-right: .5em;
