--- a/sass/_work.scss
+++ b/sass/_work.scss
@@ -77,9 +77,9 @@
                     height: 13rem;
                 }
                 width: 65%;
-                width: 10rem;
-                height: 65%;
+                width: 15rem;
                 height: 10rem;
+                height: auto;
                 border-radius: .5rem;
                 overflow: hidden;
                 margin: 1rem auto;
