--- a/css/style.css
+++ b/css/style.css
@@ -2700,9 +2700,9 @@ hamburger
 .work .work-items .work-item figure {
   margin: 5vh auto;
   width: 65%;
-  width: 10rem;
-  height: 65%;
+  width: 15rem;
   height: 10rem;
+  height: auto;
   border-radius: 0.5rem;
   overflow: hidden;
   margin: 1rem auto;
