--- a/css/style.css
+++ b/css/style.css
@@ -2708,7 +2708,7 @@ hamburger
   margin: 1rem auto;
   border: 1px solid #0004;
   padding: 0.5rem;
-  border-radius: 0.25rem;
+  border-radius: 0.5rem;
 }
 @media (min-width: 768px) {
   .work .work-items .work-item figure {
@@ -2722,7 +2722,10 @@ hamburger
   border-radius: 0.5rem;
   object-fit: 100%;
   object-fit: cover;
-  transition: 0.3s;
+  transition: 0.25s;
+}
+.work .work-items .work-item figure:hover img {
+  transform: scale(1.025);
 }
 .work .work-items .work-item .view-site-btn {
   border: none;
@@ -2858,9 +2861,6 @@ hamburger
 }
 .work .work-items .work-item p {
   text-align: center;
-}
-.work .work-items .work-item:hover figure img {
-  transform: scale(1.05);
 }
 
 .about {
