--- a/css/style.css
+++ b/css/style.css
@@ -2659,10 +2659,10 @@ hamburger
   flex-direction: column;
   justify-content: space-between;
 }
-.work .work-items .work-item[data-scroll] {
+.work .work-items .work-item.io-item {
   transform: scale(1) translateY(10vh);
 }
-.work .work-items .work-item[data-scroll=in] {
+.work .work-items .work-item.active-item {
   transition: 1.5s;
   transform: scale(1) translateY(0vh);
 }
@@ -2698,23 +2698,14 @@ hamburger
   color: #000;
 }
 .work .work-items .work-item figure {
-  margin: 5vh auto;
-  width: 65%;
   width: 15rem;
-  height: 10rem;
+  margin: 1rem auto;
   height: auto;
   border-radius: 0.5rem;
   overflow: hidden;
-  margin: 1rem auto;
   border: 1px solid #0004;
   padding: 0.5rem;
   border-radius: 0.5rem;
-}
-@media (min-width: 768px) {
-  .work .work-items .work-item figure {
-    width: 13rem;
-    height: 13rem;
-  }
 }
 .work .work-items .work-item figure img {
   width: 100%;
@@ -2724,15 +2715,25 @@ hamburger
   object-fit: cover;
   transition: 0.25s;
 }
+@media (min-width: 768px) {
+  .work .work-items .work-item figure {
+    width: 15rem;
+    width: 15rem;
+    height: 20rem;
+  }
+  .work .work-items .work-item figure img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+  }
+}
 .work .work-items .work-item figure:hover img {
   transform: scale(1.025);
 }
-.work .work-items .work-item .view-site-btn {
+.work .work-items .work-item .work-btn {
   border: none;
   outline: none;
-  background: #dc143c8c;
   border-radius: 0.5rem;
-  color: #f4f4f4;
   padding: 0.7rem 0.5rem;
   text-transform: capitalize;
   margin: 0 auto 0.8rem;
@@ -2745,7 +2746,7 @@ hamburger
   position: relative;
   isolation: isolate;
 }
-.work .work-items .work-item .view-site-btn::before, .work .work-items .work-item .view-site-btn::after {
+.work .work-items .work-item .work-btn::before, .work .work-items .work-item .work-btn::after {
   position: absolute;
   content: "";
   top: 0;
@@ -2755,6 +2756,36 @@ hamburger
   border-radius: 0.5rem;
   transition: 0.2s;
   z-index: -1;
+}
+@media (min-width: 820px) {
+  .work .work-items .work-item .work-btn:hover {
+    transform: scale(0.95);
+    letter-spacing: normal;
+    text-decoration: none;
+  }
+  .work .work-items .work-item .work-btn:hover::before {
+    opacity: 0;
+  }
+  .work .work-items .work-item .work-btn:hover::after {
+    opacity: 1;
+  }
+}
+@media (max-width: 820px) {
+  .work .work-items .work-item .work-btn:active {
+    transform: scale(0.95);
+    letter-spacing: normal;
+    text-decoration: none;
+  }
+  .work .work-items .work-item .work-btn:active::before {
+    opacity: 0;
+  }
+  .work .work-items .work-item .work-btn:active::after {
+    opacity: 1;
+  }
+}
+.work .work-items .work-item .view-site-btn {
+  color: #f4f4f4;
+  background: #dc143c8c;
 }
 .work .work-items .work-item .view-site-btn::before {
   background: linear-gradient(0deg, #3f0d0d, #dc134c);
@@ -2767,7 +2798,7 @@ hamburger
 }
 @media (min-width: 820px) {
   .work .work-items .work-item .view-site-btn {
-    width: 13rem;
+    width: 15rem;
   }
   .work .work-items .work-item .view-site-btn:hover {
     transform: scale(0.95);
@@ -2793,34 +2824,8 @@ hamburger
   }
 }
 .work .work-items .work-item .view-repo-btn {
-  display: block;
-  margin: 0 auto;
-  padding: 0.55rem 0;
-  width: 15rem;
-  border: none;
-  outline: none;
   background: #fff;
   color: #b60f30;
-  font-weight: 500;
-  text-transform: capitalize;
-  text-align: center;
-  text-decoration: none;
-  border-radius: 0.5rem;
-  transition: 0.2s;
-  letter-spacing: 0.05rem;
-  position: relative;
-  isolation: isolate;
-}
-.work .work-items .work-item .view-repo-btn::before, .work .work-items .work-item .view-repo-btn::after {
-  position: absolute;
-  content: "";
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  border-radius: 0.5rem;
-  transition: 0.2s;
-  z-index: -1;
 }
 .work .work-items .work-item .view-repo-btn::before {
   background: linear-gradient(0deg, #eee, #ffff);
@@ -2829,38 +2834,6 @@ hamburger
 .work .work-items .work-item .view-repo-btn::after {
   background: linear-gradient(0deg, #fff, #eee);
   opacity: 0;
-}
-@media (min-width: 820px) {
-  .work .work-items .work-item .view-repo-btn {
-    width: 13rem;
-  }
-  .work .work-items .work-item .view-repo-btn:hover {
-    transform: scale(0.95);
-    letter-spacing: normal;
-    text-decoration: none;
-  }
-  .work .work-items .work-item .view-repo-btn:hover::before {
-    opacity: 0;
-  }
-  .work .work-items .work-item .view-repo-btn:hover::after {
-    opacity: 1;
-  }
-}
-@media (max-width: 820px) {
-  .work .work-items .work-item .view-repo-btn:active {
-    transform: scale(0.95);
-    letter-spacing: normal;
-    text-decoration: none;
-  }
-  .work .work-items .work-item .view-repo-btn:active::before {
-    opacity: 0;
-  }
-  .work .work-items .work-item .view-repo-btn:active::after {
-    opacity: 1;
-  }
-}
-.work .work-items .work-item p {
-  text-align: center;
 }
 
 .about {
