--- a/sass/_work.scss
+++ b/sass/_work.scss
@@ -30,10 +30,10 @@
             // ITEM BACKGROUND COLORS
 
             // DATA-SCROLL
-            &[data-scroll] {
+            &.io-item {
                 transform: scale(1) translateY(10vh);
             }
-            &[data-scroll="in"] {
+            &.active-item {
                 transition: 1.5s;
                 transform: scale(1) translateY(0vh);
             }
@@ -71,23 +71,16 @@
                 }
             }
             figure {
-                margin: 5vh auto;
-                @media (min-width: 768px) {
-                    width: 13rem;
-                    height: 13rem;
-                }
-                width: 65%;
                 width: 15rem;
-                height: 10rem;
+                margin: 1rem auto;
                 height: auto;
                 border-radius: .5rem;
                 overflow: hidden;
-                margin: 1rem auto;
                 border: 1px solid #0004;
                 padding: .5rem;
                 border-radius: .5rem;
 
-
+                
                 img {
                     width: 100%;
                     height: auto;
@@ -97,20 +90,27 @@
                     transition: .25s;
                     // border: 1px solid #000;
                 }
+                @media (min-width: 768px) {
+                    width: 15rem;
+                    width: 15rem;
+                    height: 20rem;
+                    img {
+                        height: 100%;
+                        width: 100%;
+                        object-fit: cover;
+                    }
+                }
                 &:hover {
                     img {
                         transform: scale(1.025);
                     }
                 }
             }
-
-            .view-site-btn {
-                // border: 1px solid blue;
+            // WORK ITEMS CTA BUTTONS
+            .work-btn {
                 border: none;
                 outline: none;
-                background: $span-crimson-dark;
                 border-radius: .5rem;
-                color: $text-light;
                 padding: .7rem .5rem;
                 text-transform: capitalize;
                 margin: 0 auto .8rem;
@@ -122,7 +122,6 @@
                 letter-spacing: .05rem;
                 position: relative;
                 isolation: isolate;
-                
                 // BUTTON PSEUDO SHADOWS AND BG
                 &::before, &::after {
                     position: absolute;
@@ -135,6 +134,33 @@
                     transition: .2s;
                     z-index: -1;
                 }
+                // HOVER AND ACTIVE MEDIA QUERY
+                // DESKTOP HOVER STATE
+                @media (min-width: 820px){
+                    &:hover {
+                        transform: scale(.95);
+                        letter-spacing: normal;
+                        text-decoration: none;
+                        &::before {opacity: 0;}
+                        &::after {opacity: 1;}
+                    }
+                }
+                // MOBILE ACTIVE CLASS
+                @media (max-width: 820px){
+                    &:active {
+                        transform: scale(.95);
+                        letter-spacing: normal;
+                        text-decoration: none;
+                        &::before {opacity: 0;}
+                        &::after {opacity: 1;}
+                    }
+                }
+            }
+            // WEBSITE URL LINKS
+            .view-site-btn {
+                // border: 1px solid blue;
+                color: $text-light;
+                background: $span-crimson-dark;
                 &::before {
                     background: $button-crimson;
                     box-shadow: $box-light-top-sm;
@@ -148,7 +174,7 @@
                 // HOVER AND ACTIVE MEDIA QUERY
                 // DESKTOP HOVER STATE
                 @media (min-width: 820px){
-                    width: 13rem;
+                    width: 15rem;
                     &:hover {
                         transform: scale(.95);
                         letter-spacing: normal;
@@ -166,76 +192,19 @@
                     }
                 }
             }
+            // GITHUB REPO
             .view-repo-btn {
                 // border: 1px solid blue;
-                display: block;
-                margin: 0 auto;
-                padding: .55rem 0;
-                width: 15rem;
-                border: none;
-                outline: none;
                 background: #fff;
                 color: $dark-crimson;
-                font-weight: 500;
-                text-transform: capitalize;
-                text-align: center;
-                text-decoration: none;
-                // text-decoration: underline;
-                border-radius: .5rem;
-                transition: .2s;
-                letter-spacing: .05rem;
-                position: relative;
-                isolation: isolate;
-                
-                // BUTTON PSEUDO SHADOWS AND BG
-                &::before, &::after {
-                    position: absolute;
-                    content: '';
-                    top: 0;
-                    left: 0;
-                    width: 100%;
-                    height: 100%;
-                    border-radius: .5rem;
-                    transition: .2s;
-                    z-index: -1;
-                }
                 &::before {
                     background: linear-gradient(0deg, #eee, #ffff);
                     border: .05rem solid $dark-crimson;
-                    // box-shadow: $box-light-top-sm;
                 }
                 &::after {
                     background: linear-gradient(0deg, #fff, #eee);
-                    // box-shadow: $box-light-top-sm-hover;
                     opacity: 0;
                 }
-                
-                // HOVER AND ACTIVE MEDIA QUERY
-                // DESKTOP HOVER STATE
-                @media (min-width: 820px){
-                    width: 13rem;
-                    &:hover {
-                        transform: scale(.95);
-                        letter-spacing: normal;
-                        text-decoration: none;
-                        &::before {opacity: 0;}
-                        &::after {opacity: 1;}
-                    }
-                }
-                // MOBILE ACTIVE CLASS
-                @media (max-width: 820px){
-                    &:active {
-                        transform: scale(.95);
-                        letter-spacing: normal;
-                        text-decoration: none;
-                        &::before {opacity: 0;}
-                        &::after {opacity: 1;}
-                    }
-                }
-            }
-            p {
-                text-align: center;
-                
             }
             
         }
