--- a/css/style.css
+++ b/css/style.css
@@ -2673,6 +2673,7 @@ hamburger
 }
 .work .work-items .work-item .work-title {
   text-align: center;
+  margin-bottom: 2.5vh;
 }
 .work .work-items .work-item .work-title h3 {
   text-transform: capitalize;
@@ -2680,8 +2681,6 @@ hamburger
   font-weight: 500;
   font-size: 1.25rem;
   color: #29323c;
-  margin-bottom: 0.5rem;
-  line-height: 1.3;
 }
 .work .work-items .work-item .work-title h3 br {
   display: none;
@@ -2705,7 +2704,7 @@ hamburger
 .work .work-items .work-item figure {
   width: 100%;
   width: 20rem;
-  height: 40vh;
+  height: 50vh;
   margin: 0.5rem auto 1rem;
   border-radius: 0.5rem;
   overflow-x: hidden;
