--- a/sass/_work.scss
+++ b/sass/_work.scss
@@ -42,14 +42,13 @@
             }
             .work-title {
                 text-align: center;
+                margin-bottom: 2.5vh;
                 h3 {
                     text-transform: capitalize;
                     font-family: $font-title;
                     font-weight: 500;
                     font-size: 1.25rem;
                     color:$overlay-blue-dark;
-                    margin-bottom: .5rem;
-                    line-height: 1.3;
                     br {
                         display: none;
                     }
@@ -76,7 +75,7 @@
             figure {
                 width: 100%;
                 width: 20rem;
-                height: 40vh;
+                height: 50vh;
                 margin: .5rem auto 1rem;
                 border-radius: .5rem;
                 overflow-x: hidden;
