--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -63,6 +63,7 @@ $nav-active-background: #1b2127;
 $ul-background: #1f1e1e;
 $overlay-footer: linear-gradient(0deg, #20262e, #29323c);
 $overlay-footer: linear-gradient(0deg, #15191e, #20262e);
+$overlay-footer: linear-gradient(0deg, #000, #15191e);
 
 // button colors
 $button-background-grey: #8584844b;
