--- a/sass/_work.scss
+++ b/sass/_work.scss
@@ -84,7 +84,7 @@
                 padding: 10vh 10vw;
                 padding: 1rem;
                 border-radius: .5rem;
-                background: $overlay-blue-darker;
+                background: $overlay-blue-darkest;
                 transition: .25s;
                 @include sm {
                     padding: 1rem;
