--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -215,7 +215,7 @@
                         &#intro::first-letter {
                             font-size: 2.5em;
                             float: left;
-                            background: $overlay-blue-darker;
+                            background: $overlay-blue-darkest;
                             color: $span-light;
                             color: $text-light;
                             padding: 0 .1em;
