--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -16,6 +16,7 @@
         width: 100%;
         height: 100%;
         background: $overlay-blue-darker;
+        background: #000;
         z-index: -1;
         opacity: 0;
         transition: .25s;
@@ -100,7 +101,6 @@
     .navbar {
         height: 100%;
         transition: 1s ease background-color;
-        
         #nav {
             display: flex;
             align-items: center;
@@ -167,6 +167,7 @@
                         width: 100vw;
                         height: 100vh;
                         background-color: $nav-active-background;
+                        background-color: #000;
                         transition: .5s ease;
                         // overflow-y: auto;
                         z-index: 5;
